# knowledge-wiki

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  docker-compose.yml
.hermes/plans/: 2026-07-11_014900-okf-knowledge-wiki.md
data/wiki/: index.md  log.md
data/wiki/comparisons/: feature-flag-platforms.md  jvm-python-feature-config.md
data/wiki/concepts/: datadog-java-tracer-agent.md  exposed.md  feature-configuration.md  ktor.md  line-central-dogma.md  line-flagship-openflagr.md  okf.md  openfeature.md  ow2-asm.md  pgvector.md  spring-ai.md  spring-amqp.md  spring-cloud-bus.md  spring-cloud-config.md  spring-kafka-listener-containers.md  spring-oss-ecosystem.md
data/wiki/projects/: personal-knowledge-system.md
data/wiki/sources/: datadog-dd-trace-java-readme-2026-07-12.md  exposed-readme-2026-07-11.md  ktor-readme-2026-07-11.md  open-knowledge-format-okf.md  ow2-asm-readme-2026-07-12.md  spring-ai-readme-2026-07-11.md  spring-amqp-readme-2026-07-11.md  spring-cloud-bus-docs-2026-07-11.md  (+3 more)
docs/: dd-trace-java-spring-controller-flow.html  spring-kafka-listener-container-cookbook.html
infra/postgres/: 001-schema.sql
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: catalog.py  chunks.py  embeddings.py  main.py  neo4j_graph.py  okf.py  sources.py
server/tests/: test_api.py  test_catalog.py  test_chunks.py  test_embeddings.py  test_neo4j_graph.py  test_okf.py  test_sources.py
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
