[project]
name = "okf-knowledge-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pyyaml>=6,<7",
  "psycopg[binary]>=3.2,<4",
  "httpx>=0.27,<1",
  "sentence-transformers>=3.0,<4",
  "neo4j>=5.26,<6",
]

[dependency-groups]
dev = ["pytest>=8,<9", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
